# wpi

./: .env  .env.example  .gitignore  BUILD_PROMPT.md  CLAUDE.md  DEPLOY.md  KNOWN_LIMITATIONS.md  LOGISTICS_TOOL_PLAN.md  Makefile  Wind_Micrositing_EYA_Blueprint.html  docker-compose.yml  elevation.md  exclusion-plan.md  newRag.MD  pdfPlan.md  plan.md  pro-map-3d-terrain-research.md  rag-plan.md  wind-cf-engine-plan.md  windmap-india (11).html
ingestion/: .gitignore  chunk_doc.py  docker-compose.yml  embed_and_upsert.py  extract_facts.py  ingest_all.py  ingest_all_docx.py  ingest_one.py  inventory_docx.py  parse_docx.py  pyproject.toml  verify_retrieval.py
ingestion/data/: docx_inventory.json  ingestion_report_20260526_153846Z.json  ingestion_report_20260526_183551Z.json  ingestion_report_20260526_183747Z.json  ingestion_report_20260526_190941Z.json  ingestion_report_20260526_200247Z.json
services/site-analysis/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/site-analysis/app/: config.py  db.py  health.py  main.py  serialize.py
services/site-analysis/app/api/: routes.py
services/site-analysis/app/engine/: climate.py  compute.py  context.py  geometry.py  grid.py  indiacdf.py  mask.py  mercator.py  numeric.py  pipeline.py  resource.py  result_cache.py  score.py  (+4 more)
services/site-analysis/tests/: test_analyze_route.py  test_climate.py  test_context.py  test_geometry.py  test_grid.py  test_health.py  test_indiacdf.py  test_mask.py  test_mercator.py  test_numeric.py  test_pipeline.py  test_resource.py  test_result_cache.py  test_score.py  test_tiles.py  test_validation.py  test_weibull.py
(+596 files in other folders)
