[project]
name = "wind-rag-ingestion"
version = "0.1.0"
description = "RAG ingestion pipeline for the wind-energy PDF corpus."
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0",
    # Apple Vision OCR backend for Docling. Mac-only; on Linux Docling
    # falls back to TesseractCliOcrOptions and this dep is a noop install.
    "ocrmac>=1.0; sys_platform == 'darwin'",
    "openai>=1.40",
    "qdrant-client>=1.11",
    "tiktoken>=0.7",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# This project is just a couple of scripts (ingest_one.py) — there's no
# importable Python package. Tell setuptools so it doesn't try to claim
# data/ and qdrant_storage/ as top-level packages on `pip install -e .`.
[tool.setuptools]
py-modules = []
