[project]
name = "site-analysis"
version = "0.1.0"
description = "FastAPI port of the wind site-analysis engine (parity-first migration)"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "psycopg[binary,pool]>=3.2",
  "numpy>=2.1",
  "rasterio>=1.4",
  "shapely>=2.0",
  "pyproj>=3.7",
  "mapbox-vector-tile>=2.1",
  "protobuf>=5.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
